# RC-Control

./: .gitignore  README.md  pyproject.toml
config/: actuation.yaml  ekf.yaml  nmpc.yaml  perception.yaml  perception_new.yaml  system.yaml  tires.yaml  track_simple.yaml  vehicle.yaml
docs/: acados_setup.md
scripts/: fit_pacejka.py  fit_throttle_model.py  measure_latency.py
src/.depthai_cached_models/98fa008f114a052fc110a400b9f2526e541e7c72/: metadata.yaml
src/rc_nmpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rc_nmpc/apps/: run_vehicle.py  run_vehicle_red.py  test_actuators.py  test_gamepad.py
src/rc_nmpc/control/: nmpc.py
src/rc_nmpc/estimation/: ekf.py
src/rc_nmpc/hw/: actuators.py  gamepad.py  mapping.py
src/rc_nmpc/hw/backends/: pigpio_pwm.py
src/rc_nmpc/models/: vehicle.py
src/rc_nmpc/perception/: oakd.py  oakd_new.py  oakd_red.py
src/rc_nmpc/utils/: config.py  filters.py  logging.py  math.py  messages.py  ring_buffer.py  time_sync.py
tests/: test_math.py
