[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-nmpc"
version = "0.1.0"
description = "RC car NMPC with OAK-D Pro (Python-only)"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pyyaml",
    "filterpy",
    "casadi",
    "matplotlib",
    "pandas",
    "tqdm",
    "depthai",
    "pigpio",
    "evdev",
    "pytest",
    "rich"
]

[tool.setuptools.packages.find]
where = ["src"]
